--- a/3proxy.cfg
+++ b/3proxy.cfg
@@ -22,24 +22,24 @@ daemon
 #Logs path and log format. Creation date will be added to a log name
 #log /dev/null
 #
-log /var/log/3proxy/3proxy.log
-logformat "- +_L%t.%. %N.%p %E %U %C:%c %R:%r %O %I %h %T"
+#log /var/log/3proxy/3proxy.log
+#logformat "- +_L%t.%. %N.%p %E %U %C:%c %R:%r %O %I %h %T"
 #Compress logs using gzip
 #
 archiver gz /usr/bin/gzip %F
 #store the logs for 30 days
-rotate 1
+#rotate 1
 #enable strong authorization. To disable authentication, simply change to 'auth none'
 #added authentication cachiing to make life easier
-authcache user 60
+authcache user 6000
 auth strong cache
 #restrict access for ports via http(s)-proxy and deny access to local interfaces
 #
 deny * * 127.0.0.1,192.168.1.1
 allow * * * 80-88,8080-8088 HTTP
 allow * * * 443,8443 HTTPS
-#allow * * * 1-65535 HTTP
-#allow * * * 1-65535 HTTPS
+allow * * * 1-65535 HTTP
+allow * * * 1-65535 HTTPS
 
 #HTTP Proxy
 auth strong cache
