--- a/3proxy.cfg
+++ b/3proxy.cfg
@@ -26,7 +26,7 @@ daemon
 #logformat "- +_L%t.%. %N.%p %E %U %C:%c %R:%r %O %I %h %T"
 #Compress logs using gzip
 #
-archiver gz /usr/bin/gzip %F
+#archiver gz /usr/bin/gzip %F
 #store the logs for 30 days
 #rotate 1
 #enable strong authorization. To disable authentication, simply change to 'auth none'
